--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3029,4 +3029,19 @@ article .post-content .has-content-area {
 }
 
 
+/*encuesta card*/
+
+.encuesta.card {
+    background-size: cover;
+}
+
+.encuesta.card h3 {
+    margin: 0px;
+    background: #e7d117;
+    color: #fff;
+    font-weight: bold;
+    font-family: "Bree serif";
+}
+
+
 /* END ENCUESTAS*/
