--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3041,6 +3041,7 @@ article .post-content .has-content-area {
     color: #fff;
     font-weight: bold;
     font-family: "Bree serif";
+    font-size: 16px;
 }
 
 
