--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3042,6 +3042,8 @@ article .post-content .has-content-area {
     font-weight: bold;
     font-family: "Bree serif";
     font-size: 16px;
+    padding: 10px 15px;
+    text-align: center;
 }
 
 
