--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3129,5 +3129,10 @@ article .post-content .has-content-area {
     margin-left: 5px;
 }
 
+.encuesta.card .voted .total {
+    transform: translateX(0px);
+    opacity: 1;
+}
+
 
 /* END ENCUESTAS*/
