--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3033,6 +3033,8 @@ article .post-content .has-content-area {
 
 .encuesta.card {
     background-size: cover;
+    background-color: rgba(0, 0, 0, 0.3);
+    background-blend-mode: overlay;
 }
 
 .encuesta.card h3 {
