--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3148,6 +3148,7 @@ article .post-content .has-content-area {
     left: 33px;
     top: 60px;
     margin: 0 auto;
+    z-index: 5;
 }
 
 .rs-container .rs-scale {
