--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3157,6 +3157,7 @@ article .post-content .has-content-area {
 
 .rs-container .rs-scale span ins {
     color: transparent;
+    background: transparent;
 }
 
 .rs-container .rs-bg {
