--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3151,7 +3151,7 @@ article .post-content .has-content-area {
     left: 20px;
     width: 80%;
     border-radius: 30px;
-    background: transparent;
+    background: transparent !important;
     border: 2px solid white;
     box-shadow: none !important;
 }
