--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1455,8 +1455,6 @@ ul.tagposts-list li {
     width: 100%;
     position: relative;
     top: 60px;
-    opacity: 0;
-    transform: translateY(10px);
     transition: 300ms ease;
 }
 
@@ -1550,7 +1548,7 @@ ul.tagposts-list li {
     opacity: 1;
 }
 
-.post-rendered:hover .hovered .action-container {
+.post-rendered:hover .hovered .actions-container {
     transform: translateY(0px);
     opacity: 1;
 }
@@ -1908,7 +1906,7 @@ ul.tagposts-list li {
     top: auto !important;
 }
 
-.opinion .hovered .action-container {
+.opinion .hovered .actions-container {
     transform: translateY(10px);
     transition: 300ms ease;
     opacity: 0;
