--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3154,6 +3154,7 @@ article .post-content .has-content-area {
     width: 90%;
     display: block;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
 .slider {
