--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3156,6 +3156,7 @@ article .post-content .has-content-area {
     margin: 0 auto;
     margin-top: 20px;
     z-index: 5;
+    position: relative;
 }
 
 .slider {
