--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3177,3 +3177,11 @@ article .post-content .has-content-area {
     background-color: transparent !important;
     border-radius: 50%;
 }
+
+.noUi-handle::before {
+    display: none;
+}
+
+.noUi-handle::after {
+    display: none;
+}
