--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3176,6 +3176,12 @@ article .post-content .has-content-area {
     box-shadow: none !important;
     background-color: transparent !important;
     border-radius: 50%;
+    border: 0px !important;
+    height: 30px;
+    width: 30px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .noUi-handle::before {
