--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3177,8 +3177,8 @@ article .post-content .has-content-area {
     background-color: transparent !important;
     border-radius: 50%;
     border: 0px !important;
-    height: 30px;
-    width: 30px;
+    height: 33px !important;
+    width: 33px !important;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
