--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3188,7 +3188,7 @@ body::after {
 }
 
 .noUi-connect {
-    border-radius: 30px;
+    border-radius: 30px !important;
     background: transparent !important;
     box-shadow: inset 0px 0px 3px 4px rgba(231, 209, 23, 0.6) !important;
 }
