--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3191,6 +3191,7 @@ body::after {
     border-radius: 30% !important;
     background: transparent !important;
     box-shadow: inset 0px 0px 3px 4px rgba(231, 209, 23, 0.6) !important;
+    box-sizing: border-box;
 }
 
 .noUi-handle {
