--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3187,8 +3187,11 @@ body::after {
     box-shadow: inset 0px 0px 3px 4px rgba(255, 255, 255, 0.6) !important;
 }
 
+noUi-connects {
+    border-radius: 30px !important;
+}
+
 .noUi-connect {
-    border-radius: 30% !important;
     background: transparent !important;
     box-shadow: inset 0px 0px 3px 4px rgba(231, 209, 23, 0.6) !important;
     box-sizing: border-box;
