--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3187,7 +3187,7 @@ body::after {
     box-shadow: inset 0px 0px 3px 4px rgba(255, 255, 255, 0.6) !important;
 }
 
-noUi-connects {
+.noUi-connects {
     border-radius: 30px !important;
 }
 
