--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3188,7 +3188,7 @@ body::after {
 }
 
 .noUi-connects {
-    border-radius: 30px !important;
+    border-radius: 5% !important;
 }
 
 .noUi-connect {
