--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3220,6 +3220,6 @@ body::after {
 }
 
 .widget_rss ul li {
-    margin-top: 0rem;
-    margin-bottom: 0rem;
+    margin-top: 0rem !important;
+    margin-bottom: 0rem !important;
 }
