--- a/wp-content/themes/elcanciller/js/noty/noty.css
+++ b/wp-content/themes/elcanciller/js/noty/noty.css
@@ -148,7 +148,9 @@
   z-index: 10000;
   opacity: .3;
   left: 0;
-  top: 0; }
+  top: 0; 
+  background-color: #e7d12d;
+}
 
 .noty_modal.noty_modal_open {
   opacity: 0;
