--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2456,6 +2456,10 @@ article .post-content .has-content-area {
     background: #edede6;
 }
 
+.single #main{
+    overflow-x: hidden;
+}
+
 
 /*COMMENTS*/
 
