--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -49,7 +49,7 @@ blockquote {
     border-left: 6px solid #e7d117;
     margin-left: 0;
     padding: 20px;
-    margin-left: 25px;
+    margin-left: 10px;
     font-family: "Bree Serif";
     color: #b29f93;
     font-size: 18px;
@@ -57,6 +57,7 @@ blockquote {
 
 blockquote p {
     margin: 0 !important;
+    font-size: 21px;
 }
 
 .site-content {
@@ -1247,6 +1248,7 @@ ul.tagposts-list li {
     text-transform: uppercase;
     padding: 10px 0;
     position: relative;
+    z-index: 9999;
 }
 
 .loadmore:before {
@@ -2538,7 +2540,6 @@ article .post-content .has-content-area {
 .comment-form .comment-notes,
 .comment-form label {
     font-size: 14px;
-    color: #e7d117;
 }
 
 .comment-form-comment {
@@ -2651,17 +2652,22 @@ article .post-content .has-content-area {
 }
 
 #commentform input[type="submit"] {
-    border-radius: 20px;
     background: #e7d117;
     color: #fff;
-    padding: 10px 15px;
+    padding: 8px 16px;
     font-size: 15px;
     text-transform: lowercase;
-    font-family: "Bree Serif";
+    font-family: "Lato";
+    line-height: 23px;
+    font-weight: 500;
 }
 
 .comment-form-flex {
     margin: 0px;
+}
+
+#respond{
+    margin: 30px auto;
 }
 
 .comment-form-flex #respond+.comments-title {
@@ -2673,6 +2679,7 @@ article .post-content .has-content-area {
     outline: 0;
     border-color: #ccc;
     font-size: 15px;
+    border-radius: 4px;
 }
 
 .comment-form-url {
