--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3004,7 +3004,12 @@ article .post-content .has-content-area {
     align-items: center;
     position: relative;
     padding-top: 50px;
-    flex-wrap: wrap;
+}
+
+@media (min-width: 1100px){
+    .encuesta-section .opciones{
+        flex-wrap: wrap;
+    }
 }
 
 .encuesta-section .opciones::before {
