--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -68,6 +68,11 @@ blockquote p {
     max-width: 1100px;
     margin: 0 auto;
 }
+@media (max-width: 1100px){
+    .container{
+    padding: 0 20px;
+    }
+}
 
 
 /* ---------------------------*/
