--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -423,10 +423,10 @@ input:-internal-autofill-selected {
     margin: 0 auto;
 }
 @media (max-width: 1100px){
-    .inner-container{
+    .inner.container{
     padding: 0 20px;
     }
-    .outer-container{
+    .outer.container{
         padding: 0 20px;
     }
 }
