--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -426,7 +426,7 @@ input:-internal-autofill-selected {
     .inner.container{
     padding: 0 20px;
     }
-    .outer.container{
+    .outer-container{
         padding: 0 20px;
     }
 }
