--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1154,18 +1154,29 @@ ul.tagposts-list li {
 
 @media (max-width: 950px){
     .col-1-2 {
-    display: grid;
-    grid-template-columns: 1fr;
+        display: grid;
+        grid-template-columns: 1fr;
     }
 }
 
 .col-2-2 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));;
     grid-gap: 30px;
     padding-left: 10px;
     margin-bottom: 50px;
     margin-top: 50px;
+}
+
+@media (max-width: 950px){
+    .col-2-2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 30px;
+        padding-left: 10px;
+        margin-bottom: 50px;
+        margin-top: 50px;
+    }
 }
 
 .advertical {
