--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1161,7 +1161,7 @@ ul.tagposts-list li {
 
 .col-2-2 {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 30px;
     padding-left: 10px;
     margin-bottom: 50px;
