--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1845,7 +1845,7 @@ ul.tagposts-list li {
 
 .opiniones {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, minmax(400px, 1fr));;
     grid-gap: 20px;
     margin-top: -60px;
     position: relative;
