--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -441,10 +441,23 @@ input:-internal-autofill-selected {
     width: 23%;
 }
 
+@media (max-width: 980px){
+    .inner.container .sidebar {
+        display:none;
+    }
+}
+
 .inner.container .content {
     width: 77%;
     border-top: 4px solid #e7d117;
 }
+
+@media (max-width: 980px){
+    .inner.container .content {
+        width: 100%;
+    }
+}
+
 
 
 /*end front page*/
