--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -118,6 +118,13 @@ h2:before {
     width: 77%;
 }
 
+@media (max-width: 980px){
+    .header-navigation {
+        margin: 0 auto;
+        width: 100%;
+    }
+}
+
 .header-menu li {
     display: inline-block;
     font-family: 'Bree Serif', serif;
