--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1773,6 +1773,11 @@ ul.tagposts-list li {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
 }
+@media (max-width: 550px){
+    .videos-feed {
+        grid-template-columns: 1fr;
+    }
+}
 
 
 /* ---------------------------*/
