--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3415,7 +3415,7 @@ SECCION AUTORES
 
 /* SECCION ULTIMO MOMENTO */
 .ultimoicon{
-    color: #e7d117 !important;
+    color: #fff !important;
 }
 .ultimomomento-section{
     background-color: #ead637;
