--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2282,6 +2282,7 @@ ul.tagposts-list li {
 
 .site-info p {
     color: #fff !important;
+    padding: 0 20px;
 }
 
 .footer-widget-1 #f2-tagcloud-2 {
