--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3259,6 +3259,23 @@ article .post-content .has-content-area {
     opacity: 1;
 }
 
+/*noty*/
+
+#noty_layout__topRight{
+    top: 20px;
+    right: 20px;
+    width: 325px;
+    background: #e7d117;
+    color: #111;
+    /* padding: 0 10px; */
+    border-radius: 4px;
+    box-shadow: 0px 3px 20px rgba(0,0,0,0.10);
+}
+
+.noty_body{
+    padding: 0 10px;
+}
+
 
 /* END ENCUESTAS*/
 
