--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2939,6 +2939,7 @@ article .post-content .has-content-area {
 
 .search-bar{
     background: #5d5d5d;
+    padding: 20px 0;
 }
 
 /* END SEARCH BAR*/
