--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3487,10 +3487,10 @@ SECCION AUTORES
 /* SECCIÓN CONTADOR */
 .contador-header{
     color: #fff !important;
-    font-size: 1.2em;
-    text-align: center;
     background-color: #e7d12d;
 }
+.contador-header h3{font-size: 16px;text-align: center;}
+.contador-header-subtitulo{font-size: 23px;text-align: left;}
 /* FIN SECCIÓN CONTADOR */
 
 .error-image {
