--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3485,12 +3485,16 @@ SECCION AUTORES
 /* FIN DE LA SECCIÓN ÚLTIMO MOMENTO */
 
 /* SECCIÓN CONTADOR */
+.widget-contador{
+    margin: 0px !important;
+}
 .contador-header{
     color: #fff !important;
     background-color: #e7d12d;
 }
-.contador-header h3{font-size: 16px;text-align: center;}
-.contador-header-subtitulo{font-size: 23px;text-align: left;}
+.contador-header h3{font-size: 26px;text-align: center;margin-bottom: 0px;}
+.contador-header-subtitulo{font-size: 23px;text-align: left;margin-left: 3%;}
+
 /* FIN SECCIÓN CONTADOR */
 
 .error-image {
