--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3486,14 +3486,28 @@ SECCION AUTORES
 
 /* SECCIÓN CONTADOR */
 .widget-contador{
-    margin: 0px !important;
+    padding: 0px !important;
 }
 .contador-header{
     color: #fff !important;
     background-color: #e7d12d;
+    padding-top: 1%;
+    padding-bottom: 6%;
 }
 .contador-header h3{font-size: 26px;text-align: center;margin-bottom: 0px;}
-.contador-header-subtitulo{font-size: 23px;text-align: left;margin-left: 3%;}
+.contador-header-subtitulo{font-size: 23px;text-align: left;margin-left: 10%;}
+.contador-cuerpo{}
+.contador-footer{
+    font-family: 'Bree Serif', serif;
+    font-weight: normal;
+    font-size: 23px;
+    text-align: left;
+    padding: 8%;
+    border: 1px solid #e7d12d;
+    background-color: #fff;
+    line-height: 1em;
+    color: #9E9E9E;
+}
 
 /* FIN SECCIÓN CONTADOR */
 
